--- a/网页样式/newOpen/css/stylesheet-infomation.css
+++ b/网页样式/newOpen/css/stylesheet-infomation.css
@@ -1,17 +1,60 @@
 body {
     background-color:rgb(180,255,180);
+    height:700px;
 }
 
 
 
+.info-body-field {
+    height:600px;
+    width:1000px;
+    background-color:white;
+    position:relative;
+    left:170px;
+    top:80px;
+}
 
 
 
+.info-welcome-words {
+    height:60px;
+    position:relative;
+    left:20px;
+    top:10px;
+    display:block;
+}
+
+.text-info-field {
+    width:400px;
+    height:540px;
+    float:left;
+}
+
+.pic-info-field {
+    width:600px;
+    height:540px;
+    float:right;
+}
+
+.pic-input-field {
+    float:left;
+    width:300px;
+    height:520px;
+    margin:10px;
+
+}
 
 
+.pic-input-frame {
+    width:300px;
+    height:400px;
+    border: 2px ridge;
+}
 
 
-
+.info-form-list {
+    margin:40px;
+}
 
 
 
