添加注册动作并应用样式；修复注册函数和SQL用户管理类中的bug

--- a/src/include/template/header.html
+++ b/src/include/template/header.html
@@ -51,6 +51,7 @@ if (count($jsList)>0)
 	</div>
 	<input id='action' type='hidden' name='action' value='login' />
 	<input type='image' name='submit' value='登录' src='<?php echo BBS_WEB_TEMPLATE.'/';?>img/login.gif' class='login-button'/>
+	<a href="?action=register">注册</a>
 	</form>
 	<?php } else
 	{
