--- a/src/include/template/register.html
+++ b/src/include/template/register.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <title></title>
 
-    <link rel="stylesheet" href="./css/stylesheet-general.css" type="text/css">
-    <link rel="stylesheet" href="./css/stylesheet-register.css" type="text/css">
+    <link rel="stylesheet" href="<?php echo BBS_WEB_TEMPLATE;?>/css/stylesheet-general.css" type="text/css">
+    <link rel="stylesheet" href="<?php echo BBS_WEB_TEMPLATE;?>/css/stylesheet-register.css" type="text/css">
 
     <script>
         function checkEmail() {
