--- a/src/include/template/areaControl.html
+++ b/src/include/template/areaControl.html
@@ -1,7 +1,50 @@
 
+    <div class="post-field">
+        <ul>
+            <li class="post-first-field">
+                <span>1楼</span>
+                
+            </li>
+            <li class="post-reply-field">
+                <span>2楼</span>
+            </li>
+            <li class="post-reply-field">
+                <span>3楼</span>
+            </li>
+            <li class="post-reply-field">
+                <span>4楼</span>
+            </li>
+            <li class="post-reply-field">
+                <span>5楼</span>
+            </li>
+            <li class="post-reply-field">
+                <span>6楼</span>
+            </li>
+            <li class="post-reply-field">
+                <span>7楼</span>
+            </li>
+            <li class="post-reply-field">
+                <span>8楼</span>
+            </li>
+            <li class="post-reply-field">
+                <span>9楼</span>
+            </li>
+            
+        </ul>
+        <ul>
+            <li class="post-page"><a href="">1</a></li>
+            <li class="post-page"><a href="">2</a></li>
+            <li class="post-page"><a href="">3</a></li>
+        </ul>
+
+        <div>
+            <textarea class="reply-input-field"></textarea>
+
+            <button class="reply-submit-field">
+                提交
+            </button>
+        </div>
 
 
-<div class="pre-index">
-    <a href="<?php echo BBS_WEB_ROOT.'/';?>">主页</a>/<a>次级</a>/<a>次次级</a>
-</div>
+    </div>
 
