--- a/src/include/template/css/stylesheet-newOpen.css
+++ b/src/include/template/css/stylesheet-newOpen.css
@@ -143,7 +143,7 @@
     width:400px;
     height:250px;
     background-color:rgb(128, 128, 128);
-    display:none;
+    display:block;
     margin:10px;
 }
 
