--- a/src/include/template/forum.html
+++ b/src/include/template/forum.html
@@ -14,20 +14,26 @@
 
 
         <div class="postList-div-post-field">
-            <ul>
-                <li class="postList-post"><a target="_blank" href="./newSinglePost.html">1号帖子</a></li>
-                <li class="postList-post"><a target="_blank" href="">2号帖子</a></li>
-                <li class="postList-post"><a target="_blank" href="">3号帖子</a></li>
-                <li class="postList-post"><a target="_blank" href="">4号帖子</a></li>
-                <li class="postList-post"><a target="_blank" href="">5号帖子</a></li>
-                <li class="postList-post"><a target="_blank" href="">6号帖子</a></li>
-                <li class="postList-post"><a target="_blank" href="">7号帖子</a></li>
-                <li class="postList-post"><a target="_blank" href="">8号帖子</a></li>
-                <li class="postList-post"><a target="_blank" href="">9号帖子</a></li>
-                <li class="postList-post"><a target="_blank" href="">10号帖子</a></li>
-                <li class="postList-post"><a target="_blank" href="">11号帖子</a></li>
-                <li class="postList-post"><a target="_blank" href="">12号帖子</a></li>
-            </ul>
+	    <?php
+	      require_once(BBS_ROOT.'/include/module/post.php');
+	      showPostList($params);
+	      for ($i = 0; $i < 12; $i ++) {
+	    ?>
+	    <div> 
+	      <ul>
+                <li class="postList-post">
+		  <a target="_blank" href="">
+		    <?php
+		      echo " 第".$i."个帖子:".$post_list[$i]['PostAdd'];
+		      //echo $post_list[$i]['PostAdd'];
+		    ?>
+		  </a>
+		</li>
+              </ul>
+	  </div>
+	    <?php
+	      }
+	    ?>
         </div>
 
 
