调整一下首页发帖栏的位置；重新生成模板文件

--- a/src/include/template/areaControl.html
+++ b/src/include/template/areaControl.html
@@ -38,7 +38,9 @@
         </ul>
 
         <div>
-            <textarea class="reply-input-field"></textarea>
+            <textarea class="reply-input-field" id="editor_1" name="content"></textarea>
+            <input id="content_1" type="hidden" value="" />
+            <input id="action" type="hidden" name="action" value="doReply" />
 
             <button class="reply-submit-field">
                 提交
