--- a/src/include/template/header.html
+++ b/src/include/template/header.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="<?php echo BBS_WEB_TEMPLATE;?>/css/stylesheet-general.css" type="text/css">
     <script src="<?php echo BBS_WEB_TEMPLATE.'/';?>JS/js-newOpen.js" type="text/javascript"></script>
 
+    <script charset="utf-8" src="<?php echo BBS_WEB_TEMPLATE.'/';?>editor/kindeditor/kindeditor-min.js"></script>
+    <script charset="utf-8" src="<?php echo BBS_WEB_TEMPLATE.'/';?>editor/kindeditor/lang/zh_CN.js"></script>
+    <script charset="utf-8" src="<?php echo BBS_WEB_TEMPLATE.'/';?>JS/KE.js"></script>
+
 </head>
 <body>
 
