--- a/src/include/template/forum.html
+++ b/src/include/template/forum.html
@@ -22,7 +22,7 @@
                 <li class="postList-post">
 		  <a target="_blank" href="">
 		    <?php
-		      echo " 第".$i."个帖子:".$post_list[$i]['PostAdd'];
+		      echo " 第".$i."个帖子:".$post_list[$i-1]['PostAdd'];
 		      //echo $post_list[$i]['PostAdd'];
 		    ?>
 		  </a>
