--- a/src/include/template/css/stylesheet-newOpen.css
+++ b/src/include/template/css/stylesheet-newOpen.css
@@ -1,6 +1,6 @@
 ﻿body
 {
-    width:1366;
+    width:1366px;
 }
 
 /*以下是logo部分*/
@@ -9,6 +9,7 @@
     background-color:rgb(200,255,200);
     height:300px;
     width:1349px;
+    margin-left:10px;
 
 }
 
@@ -23,12 +24,12 @@
 /*以下是帖子列表部分*/
 
 .postList-field {
-    height:1000px;
+    /*height:1000px;*/
     width:900px;
     background-color:rgb(202, 171, 171);
-    position:relative;
-    top:10px;
-    left:10px;
+    margin-top:10px;
+    margin-left:10px;
+    float:left;
 
 }
 
@@ -82,7 +83,7 @@
     height:30px;
     /*background-color:yellow;*/
     position:relative;
-    top:20px;
+    margin-top:20px;
     left:10px;
 
 }
@@ -101,9 +102,9 @@
 
 .post-field {
     width:880px;
-    height:290px;
-    position:absolute;
-    top:700px;
+    /*height:290px;*/
+    position:relative;
+    top:-15px;
     left:10px;
     background-color:rgb(255, 255, 255);
 
@@ -122,11 +123,11 @@
 
 .login-link-info-field {
     width:420px;
-    height:1000px;
+    /*height:1000px;*/
     background-color:rgb(0, 148, 255);
-    position:absolute;
-    top:310px;
-    left:920px;
+    margin-top:10px;
+    margin-right:10px;
+    float:right;
     
 }
 
@@ -175,9 +176,9 @@
 
 .logout-button {
     height:80px;
-    position:absolute;
-    right:10px;
-    top:185px;
+    position:relative;
+    left:130px;
+    top:130px;
 }
 
 .login-name-field {
@@ -226,9 +227,9 @@
 
 
 .login-button {
-    position:absolute;
-    right:10px;
-    top:25px;
+    position:relative;
+    left:280px;
+    top:-70px;
 
     height:80px;
 }
@@ -238,7 +239,7 @@
     font-size:18px;
     position:relative;
     left:300px;
-    top:10px;
+    top:-60px;
 }
 
 
@@ -261,8 +262,9 @@
 
 .info-field {
     background-color:white;
-    position:absolute;
-    top:690px;
+    position:relative;
+    /*top:200px;*/
+    margin:100px 0px 20px 0px;
     left:10px;
 
     height:300px;
