重写split.php，以便编辑HTML head标签时不影响其他模版页面

--- a/src/include/template/login.html
+++ b/src/include/template/login.html
@@ -20,7 +20,7 @@ if (!isset($_SESSION["SysID"])) {
 		<input type="hidden" name="action" value="login" />
 		<input class="login-button" type="image" name="submit" src="<?php echo BBS_WEB_TEMPLATE.'/';?>img/login.gif" />
 		<!-- onclick="login_then();" -->
-		<a href="?action=register">没有账户？</a>
+		<a class="register-chain" href="?action=register">没有账户？</a>
 
             </form>
         </div>
