--- a/src/include/template/login_post.html
+++ b/src/include/template/login_post.html
@@ -1,15 +1,19 @@
 
+
     <div class="post-login-info-field">
+<?php
+if (!isset($_SESSION["SysID"])) {
+?>
         <div id="post-login-field-1">
-            <form onsubmit="javascript:return false;">
+            <form  action="?action=login" method="post">
                 <div class="post-login-name-field">
                     <img class="post-login-name-pic" src="<?php echo BBS_WEB_TEMPLATE.'/';?>img/username.gif" />
-                    <input class="post-login-name-input" type="text" maxlength="12" id="post-login-name" />
+                    <input class="post-login-name-input" type="text" maxlength="12" id="post-login-name" name="Name" />
                 </div>
 
                 <div class="post-login-password-field">
                     <img class="post-login-password-pic" src="<?php echo BBS_WEB_TEMPLATE.'/';?>img/password.gif" />
-                    <input class="post-login-password-input" type="password" maxlength="18" id="post-login-password" />
+                    <input class="post-login-password-input" type="password" maxlength="18" id="post-login-password" name="Code"/>
                 </div>
 
                 <input class="post-login-button" type="image" src="<?php echo BBS_WEB_TEMPLATE.'/';?>img/login.gif" onclick="post_login_then();" />
@@ -19,26 +23,29 @@
                 <input type="hidden" />
             </form>
         </div>
-
-
+<?php
+} else {
+?>
         <!-- login-field-2是跳转后原登陆的部分 -->
         <div id="post-login-field-2">
             <a href="<?php echo BBS_WEB_ROOT.'/';?>infomation.html" target="_blank" class="post-head-chain">
-                <img src="<?php echo BBS_WEB_TEMPLATE.'/';?>img/headpicture-1.jpg" class="post-head-pic-field" />
+                <img src="<?php echo BBS_WEB_TEMPLATE.'/';?>img/headPicture-1.jpg" class="post-head-pic-field" />
                 <span class="post-login-field-2-name">这里是用户名</span>
             </a>
             <div class="post-logout-field">
                 <span class="post-logout-field-text">
                     努力水贴吧！╮(╯▽╰)╭
                 </span>
-                <form onsubmit="javascript:return false;">
-                    <input class="post-logout-button" type="image" src="<?php echo BBS_WEB_TEMPLATE.'/';?>img/logout.gif" onclick="post_logout_then();" />
+                <form  action="?action=logout" method="post">
+                    <input class="post-logout-button" type="image" src="<?php echo BBS_WEB_TEMPLATE.'/';?>img/logout.gif" onclick="submit();" />
                 </form>
             </div>
 
 
 
         </div>
-
+<?php
+}
+?>
     </div>
 
