修复回贴功能；回贴列表分页

--- a/src/include/template/areaControl.html
+++ b/src/include/template/areaControl.html
@@ -6,7 +6,7 @@
         	{
         	?>
             <li class="post-first-field">
-                <span><?php echo $i; ?>楼</span>
+                <span><?php echo $i; ?>楼</span><br />
                 <?php echo $post_list[$i-1]['PostAdd']; ?>  
             </li>
             <?php
@@ -21,7 +21,7 @@
 <?php 
 	if (isset($_SESSION['SysID'])){
 ?>
-        <div class="reply-field">
+        <form class="reply-field" action="?" method="post">
 			<div class="reply-prompt-field">回复贴子</div>
             <textarea class="reply-input-field" id="editor_1" name="content"></textarea>
             <input id="content_1" type="hidden" value="" />
@@ -30,7 +30,7 @@
             <button class="reply-submit-field">
                 提交
             </button>
-        </div>
+        </form>
 <?php
 } else {
 ?>
