--- a/src/include/template/css/stylesheet-newSinglePost.css
+++ b/src/include/template/css/stylesheet-newSinglePost.css
@@ -32,7 +32,7 @@
 
 .post-field {
     width:900px;
-    height:1700px;
+    /*height:1700px;*/
     float:right;
     position:relative;
     left:-10px;
