--- a/src/include/template/login.html
+++ b/src/include/template/login.html
@@ -29,10 +29,10 @@ if (!isset($_SESSION["SysID"])) {
 ?>
         <!-- login-field-2是跳转后原登陆的部分 -->
 	    <div id="login-field-2">
-            <a href="<?php echo BBS_WEB_ROOT.'/';?>infomation.html" target="_blank" class="head-chain">
+		<a href="<?php echo BBS_WEB_ROOT."/include/module/viewinfo.php"; ?>" target="_blank" class="head-chain">
                 <img src="<?php echo BBS_WEB_TEMPLATE.'/';?>img/headPicture-1.jpg" class="head-pic-field" />
-		<span class="login-field-2-name"><?php echo $_SESSION["Name"]; ?></span>
-            </a>
+	        <span class="login-field-2-name"><?php echo $_SESSION["Name"]; ?></span>
+              </a>
             <div class="logout-field">
                 <span class="logout-field-text">
                     努力水贴吧！╮(╯▽╰)╭
