修复发贴/回贴的内容检查函数的问题

--- a/src/include/template/areaControl.html
+++ b/src/include/template/areaControl.html
@@ -27,7 +27,7 @@
             <input id="content_1" type="hidden" value="" />
             <input id="action" type="hidden" name="action" value="doReply" />
 
-            <button class="reply-submit-field">
+            <button class="reply-submit-field" type="submit" onclick='return save();'>
                 提交
             </button>
         </form>
