--- a/src/include/template/forum.html
+++ b/src/include/template/forum.html
@@ -66,7 +66,7 @@ if (isset($_SESSION['SysID'])){
                 <textarea class="do-post-text-input-field" id="editor_1" name="content"></textarea>
                 <input id="content_1" type="hidden" value="" />
                 <input id="action" type="hidden" name='action' value="doPost" />
-                <input class="do-post-submit-button" type="submit" value="发布" onclick='save();' />
+                <input class="do-post-submit-button" type="submit" value="发布" onclick='return save();' />
             </form>
 <?php
 } else {
