--- a/src/include/template/login_post.html
+++ b/src/include/template/login_post.html
@@ -30,7 +30,7 @@ if (!isset($_SESSION["SysID"])) {
         <div id="post-login-field-2">
             <a href="<?php echo BBS_WEB_ROOT.'/';?>infomation.html" target="_blank" class="post-head-chain">
                 <img src="<?php echo BBS_WEB_TEMPLATE.'/';?>img/headPicture-1.jpg" class="post-head-pic-field" />
-                <span class="post-login-field-2-name">这里是用户名</span>
+                <span class="post-login-field-2-name"><?php echo $_SESSION["Name"]; ?></span>
             </a>
             <div class="post-logout-field">
                 <span class="post-logout-field-text">
