单贴页面的注册链接

--- a/src/include/template/login_post.html
+++ b/src/include/template/login_post.html
@@ -17,7 +17,7 @@ if (!isset($_SESSION["SysID"])) {
                 </div>
 
                 <input class="post-login-button" type="image" src="<?php echo BBS_WEB_TEMPLATE.'/';?>img/login.gif" onclick="post_login_then();" />
-                <a class="post-register-chain" href="./register.html" target="_blank">没有账户？</a>
+                <a class="post-register-chain" href="?action=register">没有账户？</a>
 
 
                 <input type="hidden" />
