--- a/src/include/template/html_head.html
+++ b/src/include/template/html_head.html
@@ -11,6 +11,6 @@
     ?>
     
     
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="<?php echo BBS_WEB_TEMPLATE.'/';?>js/jquery.min.js"></script>
 </head>
 <body>
