--- a/网页样式/css/stylesheet-newOpen.css
+++ b/网页样式/css/stylesheet-newOpen.css
@@ -1,6 +1,6 @@
 ﻿body
 {
-    width:1366px;
+    max-width:100%;
 }
 
 /*以下是logo部分*/
@@ -8,7 +8,7 @@
 .logo-field {
     background-color:rgb(200,255,200);
     height:300px;
-    width:1349px;
+    max-width:100%;
     margin-left:10px;
 
 }
@@ -24,8 +24,8 @@
 /*以下是帖子列表部分*/
 
 .postList-field {
-    /*height:1000px;*/
-    width:900px;
+    height:1000px;
+    max-width:900px;
     background-color:rgb(202, 171, 171);
     margin-top:10px;
     margin-left:10px;
@@ -34,7 +34,7 @@
 }
 
 .postList-div-mark-field {
-    width:900px;
+    max-width:900px;
     height:50px;
     background-color:rgb(255, 255, 255);
     font-size:16px;
@@ -59,6 +59,8 @@
 .postList-div-post-field {
     clear:both;
     width:900px;
+    height:480px;
+    background-color:white;
 
 }
 
@@ -150,7 +152,7 @@
 
 .login-link-info-field {
     width:420px;
-    /*height:1000px;*/
+    height:1000px;
     background-color:rgb(0, 148, 255);
     margin-top:10px;
     margin-right:10px;
@@ -275,6 +277,7 @@
     font-size:20px;
     position:relative;
     margin:20px;
+    
 }
 
 .chain-2 {
