--- a/src/include/template/html_head.html
+++ b/src/include/template/html_head.html
@@ -1,9 +1,9 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
     <title>OPEN社团 - 官方论坛</title>
-    <?php 
+    <?php
     	foreach($cssList as $temp)
     		echo '<link rel="stylesheet" href="'.BBS_WEB_TEMPLATE.$temp.'" type="text/css">'."\n";
     	foreach($jsList as $temp)
