--- a/src/include/template/login_post.html
+++ b/src/include/template/login_post.html
@@ -28,7 +28,7 @@ if (!isset($_SESSION["SysID"])) {
 ?>
         <!-- login-field-2是跳转后原登陆的部分 -->
         <div id="post-login-field-2">
-            <a href="<?php echo BBS_WEB_ROOT.'/';?>infomation.html" target="_blank" class="post-head-chain">
+            <a href="<?php echo "?action=information"; ?>" target="_blank" class="post-head-chain">
                 <img src="<?php echo BBS_WEB_TEMPLATE.'/';?>img/headPicture-1.jpg" class="post-head-pic-field" />
                 <span class="post-login-field-2-name"><?php echo $_SESSION["Name"]; ?></span>
             </a>
